# physicalsim

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  COMPONENTS.md  LICENSE  README.md  SECURITY.md  build_and_run.bat  build_and_run.sh  package_release.bat  package_release.sh
.claude/: launch.json
assets/: generate_icons.py
assets/firmware/: README.md  button-mirror.hex  hello-serial.hex
src/: avr_toolchain.cpp  avr_toolchain.hpp  main.cpp  qemu_adapter.cpp  qemu_adapter.hpp
web/: package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
web/adapters/avr8/: package.json  tsconfig.json
web/adapters/avr8/src/: adapter.test.ts  adapter.ts  led-integration.test.ts  worker.ts
web/adapters/rp2040/: package.json  tsconfig.json
web/adapters/rp2040/src/: adapter.test.ts  adapter.ts  worker.ts
web/common/: package.json  tsconfig.json
web/common/src/: adapter-types.ts  index.ts  intel-hex.test.ts  intel-hex.ts  worker-host.test.ts  worker-host.ts
web/common/src/boards/: arduino-uno.ts  board-registry.ts  board.test.ts  board.ts  rp2040-board.ts
web/common/src/circuit/: circuit-pin.test.ts  circuit-pin.ts  circuit.ts  component-protocol-pin.ts  component-signal-pin.ts
web/common/src/circuit/components/: button.ts  led-button.test.ts  led.ts
web/common/src/circuit/protocols/: hd44780-decoder.test.ts  hd44780-decoder.ts
web/shell/: index.html  package.json  tsconfig.json  vite.config.ts
web/shell/src/: adapter-registry.ts  circuit.ts  component-registry.ts  energy.ts  main.ts  native-adapter-client.ts  native-bridge.ts  native-notify.ts  protocol-chain.ts  signal-chain.ts  sketch-editor.ts  style.css  terminal.ts  vite-env.d.ts  worker-rpc.test.ts  worker-rpc.ts
web/shell/src/canvas/: context-menu.ts  index.ts  minimap.ts  protocol-net.ts  scene.ts  signal-net.ts  viewport.ts  wiring.ts
